--- a/FirstSimpleSite/Index.html
+++ b/FirstSimpleSite/Index.html
@@ -35,6 +35,8 @@
         </form>
     </div>
     <div class="login-info" id ="loginInfo"></div>
-    <div id="jsonDiv"></div>
+    <div id="jsonDiv">
+        <a onclick="task1.hideTree()"
+    </div>
 </body>
 </html>
